--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,4 +1,23 @@
-<ul>
-    <li *ngFor="let url of topStoriesArray">{{topStoriesArray}}</li>
-</ul>>
+<div *ngIf="!topStoriesContent.length && !isSpecificId">
+    <h2>One moment please... (Remind me to add a loader later)</h2>
+</div>
+<div *ngIf="!isSpecificId">
+    <ul>
+        <li *ngFor="let stories of topStoriesContent"><strong>Title: {{stories.title}}</strong>
+            <ul>
+                <li>Author: {{stories.by}}</li>
+                <li>Score: {{stories.score}}</li>
+                <li>Link: <a [href]="'https://news.ycombinator.com/item?id=' + stories.id" target="_blank">https://news.ycombinator.com/item?id={{stories.id}}</a></li>
+            </ul>
+        </li>
+    </ul>
+</div>
+<div *ngIf="isSpecificId && specificStoryContent.title">
+    <ul>
+        <li><strong>{{specificStoryContent?.title}}</strong></li>
+        <li>Score: {{specificStoryContent?.score}}</li>
+        <li>Author: {{specificStoryContent?.by}}</li>
+        <li>Link: <a [href]="'https://news.ycombinator.com/item?id=' + specificStoryContent?.id" target="_blank">https://news.ycombinator.com/item?id={{specificStoryContent?.id}}</a></li>
+    </ul>
+</div>
 
