--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,10 +1,14 @@
-<div *ngIf="!topStoriesContent.length">
-    <h2>One moment please... (Remind me to add a loader later)</h2>
-</div>
 <div>
+    <h2>{{header}}</h2>
+</div>
+
+@if(isLoading){
+<app-spinner></app-spinner>
+}
+<div *ngIf="!isLoading">
     <div>
         <ag-grid-angular
-          style="width: 100%; height: 500px;"
+          style="width: 100%; height: 800px;"
           class="ag-theme-quartz"
           [rowData]="topStoriesContent"
           [columnDefs]="columnDefs">
