Added some Cats to About Me

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,1 +1,17 @@
-<h2>Hello, this is the About Me page!<h2>
+<html>
+<body>
+    <h1 class="header-text">I'm boring, let's see my cats instead</h1>
+    <div class="section" id="section1">
+        <div class="text">This is Taco</div>
+    </div>
+    <div class="section" id="section2">
+        <div class="text">This is Sassy</div>
+    </div>
+    <div class="section" id="section3">
+        <div class="text">This is Houdini</div>
+    </div>
+    <div class="section" id="section4">
+        <div class="text">This little shit is Shadow</div>
+    </div>
+</body>
+</html>
