--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,11 +1,30 @@
-<div>
+<!-- <div>
     <h2>{{header}}</h2>
 </div>
 
-@if(isLoading){
-<app-spinner></app-spinner>
-}
-<div *ngIf="!isLoading">
+<app-spinner></app-spinner> -->
+
+<!-- <div *ngIf="!isLoading"> -->
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="location" href="/lists/topstories" routerLink="/lists/topstories">Top</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/lists/beststories"routerLink="/lists/beststories">Best</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/lists/newstories" routerLink="/lists/newstories">New</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     <div>
         <ag-grid-angular
           style="width: 100%; height: 800px;"
@@ -14,6 +33,6 @@
           [columnDefs]="columnDefs">
         </ag-grid-angular>
       </div>
-</div>
+<!-- </div> -->
 
 
